--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,11 @@
-{
+{ 
+  "exclude": ["node_modules", "**/node_modules/*"],
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "checkJs": true,
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
   }
 }
